SFDM-1734 Доработать метод PUT /business-capability