@@ -11,6 +11,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.beeline.capability.cleint.DashboardClient;
+import ru.beeline.capability.cleint.UserClient;
 import ru.beeline.capability.domain.BusinessCapability;
 import ru.beeline.capability.domain.TechCapability;
 import ru.beeline.capability.domain.TechCapabilityRelations;
@@ -27,6 +29,7 @@ import ru.beeline.fdmlib.dto.capability.BusinessCapabilityChildrenDTO;
 import ru.beeline.fdmlib.dto.capability.PutBusinessCapabilityDTO;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
@@ -53,6 +56,12 @@ public class BusinessCapabilityService {
     private FindNameSortTableService findNameSortTableService;
 
     @Autowired
+    private DashboardClient dashboardClient;
+
+    @Autowired
+    private UserClient userClient;
+
+    @Autowired
     private RabbitTemplate rabbitTemplate;
 
     @Autowired
@@ -63,12 +72,7 @@ public class BusinessCapabilityService {
 
 
     public BusinessCapabilityChildrenDTO getChildren(Long id) {
-        List<TechCapability> techCapabilities = businessCapabilityRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Business Capability не найдено"))
-                .getChildren().stream()
-                .map(TechCapabilityRelations::getTechCapability)
-                .filter(techCapability -> Objects.isNull(techCapability.getDeletedDate()))
-                .collect(Collectors.toList());
+        List<TechCapability> techCapabilities = businessCapabilityRepository.findById(id).orElseThrow(() -> new NotFoundException("Business Capability не найдено")).getChildren().stream().map(TechCapabilityRelations::getTechCapability).filter(techCapability -> Objects.isNull(techCapability.getDeletedDate())).collect(Collectors.toList());
         List<BusinessCapability> businessCapabilitiesKids = businessCapabilityRepository.findAllByParentIdAndDeletedDateIsNull(id);
         return businessCapabilityMapper.convert(techCapabilities, businessCapabilitiesKids);
     }
@@ -76,9 +80,7 @@ public class BusinessCapabilityService {
     public CapabilityParentDTO getParents(Long id) {
         ArrayList<Long> result = new ArrayList<>();
         while (true) {
-            id = businessCapabilityRepository.findById(id)
-                    .orElseThrow(() -> new NotFoundException("Business Capability не найдено"))
-                    .getParentId();
+            id = businessCapabilityRepository.findById(id).orElseThrow(() -> new NotFoundException("Business Capability не найдено")).getParentId();
 
             if (Objects.isNull(id)) {
                 return new CapabilityParentDTO(result);
@@ -89,8 +91,7 @@ public class BusinessCapabilityService {
     }
 
     public BusinessCapabilityShortDTO getById(Long id) {
-        BusinessCapability businessCapability = businessCapabilityRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Business Capability не найдено"));
+        BusinessCapability businessCapability = businessCapabilityRepository.findById(id).orElseThrow(() -> new NotFoundException("Business Capability не найдено"));
 
         if (businessCapability.getParentEntity() != null && businessCapability.getParentEntity().getDeletedDate() != null)
             businessCapability.setParentEntity(null);
@@ -99,9 +100,7 @@ public class BusinessCapabilityService {
     }
 
     public List<BusinessCapability> getByIdIn(List<Long> ids) {
-        return businessCapabilityRepository.findAllByIdIn(ids).stream()
-                .filter(bc -> bc.getDeletedDate() == null)
-                .collect(Collectors.toList());
+        return businessCapabilityRepository.findAllByIdIn(ids).stream().filter(bc -> bc.getDeletedDate() == null).collect(Collectors.toList());
     }
 
     private boolean checkHasKids(BusinessCapability businessCapability) {
@@ -117,9 +116,7 @@ public class BusinessCapabilityService {
         switch (FindBy.valueOf(findBy)) {
             case ALL:
                 businessCapabilities = businessCapabilityRepository.findCapabilities(pageable);
-                businessCapabilities.stream()
-                        .filter(сapability -> Objects.nonNull(сapability.getParentEntity()) && Objects.nonNull(сapability.getParentEntity().getDeletedDate()))
-                        .forEach(сapability -> сapability.setParentEntity(null));
+                businessCapabilities.stream().filter(сapability -> Objects.nonNull(сapability.getParentEntity()) && Objects.nonNull(сapability.getParentEntity().getDeletedDate())).forEach(сapability -> сapability.setParentEntity(null));
                 break;
             case CORE:
                 businessCapabilities = businessCapabilityRepository.findCapabilitiesWithoutParent(pageable);
@@ -131,7 +128,7 @@ public class BusinessCapabilityService {
         return businessCapabilityMapper.convertToBusinessCapabilityShortDTOList(businessCapabilities.toList());
     }
 
-    public void putCapability(PutBusinessCapabilityDTO capabilityDTO) {
+    public void putCapability(PutBusinessCapabilityDTO capabilityDTO, String userId, String productIds, String roles, String permissions) {
 
         Optional<BusinessCapability> businessCapabilityOptional = businessCapabilityRepository.findByCode(capabilityDTO.getCode());
         BusinessCapability businessCapability;
@@ -141,11 +138,27 @@ public class BusinessCapabilityService {
                 businessCapability = updateCapability(businessCapability, capabilityDTO);
                 sendNotify(businessCapability.getId(), UPDATE, changeBusinessCapabilityQueueName, capabilityDTO.getName());
                 findNameSortTableService.updateVector(businessCapability.getId(), businessCapability.getName(), businessCapability.getDescription(), businessCapability.getCode(), ENTITY_TYPE_BUSINESS_CAPABILITY);
+                putCapabilityToDashboard(capabilityDTO, userId, productIds, roles, permissions);
             }
         } else {
             businessCapability = createCapabilities(capabilityDTO);
             findNameSortTableService.updateVector(businessCapability.getId(), businessCapability.getName(), businessCapability.getDescription(), businessCapability.getCode(), ENTITY_TYPE_BUSINESS_CAPABILITY);
+            putCapabilityToDashboard(capabilityDTO, userId, productIds, roles, permissions);
         }
+    }
+
+    private void putCapabilityToDashboard(PutBusinessCapabilityDTO capabilityDTO, String userId, String productIds, String roles, String permissions) {
+        if (Objects.nonNull(userId) && Objects.nonNull(productIds) && Objects.nonNull(roles) && Objects.nonNull(permissions)) {
+            if (capabilityDTO.getAuthor() == null || capabilityDTO.getAuthor().isEmpty()) {
+                fillAuthor(capabilityDTO, userId);
+            }
+            dashboardClient.putCapability(capabilityDTO);
+        }
+
+    }
+
+    private void fillAuthor(PutBusinessCapabilityDTO capabilityDTO, String userId) {
+        capabilityDTO.setAuthor(userClient.getEmail(userId));
     }
 
     private BusinessCapability updateCapability(BusinessCapability businessCapability, PutBusinessCapabilityDTO capabilityDTO) {
@@ -162,51 +175,33 @@ public class BusinessCapabilityService {
     }
 
     public String proxyUrl(String description) {
-            String urlPattern = "\\b(https?://\\S+)\\b";
-            Pattern pattern = Pattern.compile(urlPattern);
-            Matcher matcher = pattern.matcher(description);
+        String urlPattern = "\\b(https?://\\S+)\\b";
+        Pattern pattern = Pattern.compile(urlPattern);
+        Matcher matcher = pattern.matcher(description);
 
-            StringBuffer result = new StringBuffer();
-            while (matcher.find()) {
-                String url = matcher.group(1);
-                if (!description.contains("<a href=\"" + url)
-                && !description.contains(">" + url)
-                ) {
-                    String replacement = "<a href=\"" + url + "\">" + url + "</a>";
-                    matcher.appendReplacement(result, replacement);
-                }
+        StringBuffer result = new StringBuffer();
+        while (matcher.find()) {
+            String url = matcher.group(1);
+            if (!description.contains("<a href=\"" + url) && !description.contains(">" + url)) {
+                String replacement = "<a href=\"" + url + "\">" + url + "</a>";
+                matcher.appendReplacement(result, replacement);
             }
-            matcher.appendTail(result);
+        }
+        matcher.appendTail(result);
 
-            return result.toString();
+        return result.toString();
     }
 
     private BusinessCapability createCapabilities(PutBusinessCapabilityDTO capability) {
 
-        BusinessCapability result = businessCapabilityRepository.save(BusinessCapability.builder()
-                .code(capability.getCode())
-                .name(capability.getName())
-                .description(capability.getDescription())
-                .status(capability.getStatus())
-                .author(capability.getAuthor())
-                .createdDate(new Date())
-                .lastModifiedDate(new Date())
-                .link(capability.getLink())
-                .owner(capability.getOwner())
-                .parentId(getParentId(capability))
-                .isDomain(capability.getIsDomain())
-                .build()
-        );
+        BusinessCapability result = businessCapabilityRepository.save(BusinessCapability.builder().code(capability.getCode()).name(capability.getName()).description(capability.getDescription()).status(capability.getStatus()).author(capability.getAuthor()).createdDate(new Date()).lastModifiedDate(new Date()).link(capability.getLink()).owner(capability.getOwner()).parentId(getParentId(capability)).isDomain(capability.getIsDomain()).build());
         sendNotify(result.getId(), CREATE, changeBusinessCapabilityQueueName, capability.getName());
         return result;
     }
 
     private Long getParentId(PutBusinessCapabilityDTO capability) {
-        if (capability == null || capability.getParent() == null)
-            return null;
-        return businessCapabilityRepository.findByCode(capability.getParent())
-                .map(BusinessCapability::getId)
-                .orElse(null);
+        if (capability == null || capability.getParent() == null) return null;
+        return businessCapabilityRepository.findByCode(capability.getParent()).map(BusinessCapability::getId).orElse(null);
     }
 
     private void sendNotify(Long id, String changeType, String queueName, String name) {
@@ -242,7 +237,7 @@ public class BusinessCapabilityService {
         } else {
             Optional<BusinessCapability> businessCapabilitiesOptional = businessCapabilityRepository.findById(id);
             if (businessCapabilitiesOptional.isPresent()) {
-                List<BusinessCapability> filteredBusinessCapabilities = filterChildren(List.of(businessCapabilitiesOptional.get()), businessCapabilitiesOptional.get().isDomain());
+                List<BusinessCapability> filteredBusinessCapabilities = filterChildren(Arrays.asList(businessCapabilitiesOptional.get()), businessCapabilitiesOptional.get().isDomain());
                 result = businessCapabilityMapper.mapToTree(filteredBusinessCapabilities);
             } else {
                 result = new ArrayList<>();
@@ -252,28 +247,25 @@ public class BusinessCapabilityService {
     }
 
     private List<BusinessCapability> filterChildren(List<BusinessCapability> children, boolean isDomain) {
-        return children.stream()
-                .filter(businessCapability -> businessCapability.getDeletedDate() == null && businessCapability.isDomain() == isDomain)
-                .peek(businessCapability -> businessCapability.setChildrenOfTree(filterChildren(businessCapability.getChildrenOfTree(), isDomain)))
-                .collect(Collectors.toList());
+        return children.stream().filter(businessCapability -> businessCapability.getDeletedDate() == null && businessCapability.isDomain() == isDomain).peek(businessCapability -> businessCapability.setChildrenOfTree(filterChildren(businessCapability.getChildrenOfTree(), isDomain))).collect(Collectors.toList());
     }
 
     private List<BusinessCapability> filterChildrenWithDomainIsTrue(List<BusinessCapability> children) {
-        return children.stream()
-                .filter(businessCapability -> businessCapability.getDeletedDate() == null && businessCapability.isDomain())
-                .peek(businessCapability -> businessCapability.setChildrenOfTree(filterChildrenWithDomainIsTrue(businessCapability.getChildrenOfTree())))
-                .collect(Collectors.toList());
+        return children.stream().filter(businessCapability -> businessCapability.getDeletedDate() == null && businessCapability.isDomain()).peek(businessCapability -> businessCapability.setChildrenOfTree(filterChildrenWithDomainIsTrue(businessCapability.getChildrenOfTree()))).collect(Collectors.toList());
     }
 
     enum FindBy {
-        ALL,
-        CORE
+        ALL, CORE
     }
 
-    public void validateBusinessCapabilityDTO(PutBusinessCapabilityDTO capabilityDTO) {
+    public void validateBusinessCapabilityDTO(PutBusinessCapabilityDTO capabilityDTO, String userId, String productIds, String roles, String permissions) {
         StringBuilder errMsg = new StringBuilder();
         if (capabilityDTO.getCode() == null) {
-            errMsg.append("Отсутсвует обязательное поле code\n");
+            if (Objects.nonNull(userId) && Objects.nonNull(productIds) && Objects.nonNull(roles) && Objects.nonNull(permissions)) {
+                capabilityDTO.setCode(Long.toString(businessCapabilityRepository.findFirstByOrderByIdDesc().getId() + 1));
+            } else {
+                errMsg.append("Отсутсвует обязательное поле code\n");
+            }
         }
         if (capabilityDTO.getName() == null) {
             errMsg.append("Отсутсвует обязательное поле name\n");
@@ -281,7 +273,7 @@ public class BusinessCapabilityService {
         if (capabilityDTO.getAuthor() == null) {
             errMsg.append("Отсутсвует обязательное поле author\n");
         }
-        if (capabilityDTO.getCode() == capabilityDTO.getParent()) {
+        if (capabilityDTO.getCode().equals(capabilityDTO.getParent())) {
             errMsg.append("Возможность не может быть собственным родителем\n");
         }
 
